objects/Collage__c.object
<CustomObject>
    <label>Collage</label>
    <nameField>
        <label>Collage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Collages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Student_ID__c</fullName>
        <label>Student ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collage_Address__c</fullName>
        <label>Collage Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Collage_phone_number__c</fullName>
        <description>This field is store the collaage phone number</description>
        <inlineHelpText>Phone number can start with any number not  text</inlineHelpText>
        <label>Collage phone number</label>
        <type>Phone</type>
    </fields>
</CustomObject>